manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dairy-of-api-4cc090d2-2c86-4ab5-881a-18d2aa37873a-service
spec:
  type: NodePort
  selector:
    app: dairy-of-api-4cc090d2-2c86-4ab5-881a-18d2aa37873a
  ports:
    - protocol: TCP
      port: 8090
      targetPort: 8080
